plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.3'
    id 'io.spring.dependency-management' version '1.1.4'
}

ext {
    set('springBootAdminVersion', "3.2.2")
}
java {
    sourceCompatibility = '21'
}

tasks.withType(JavaCompile) {
    options.compilerArgs += "--enable-preview"
}

tasks.withType(Test) {
    jvmArgs += "--enable-preview"
}

tasks.withType(JavaExec) {
    jvmArgs += '--enable-preview'
}
group = 'org.example'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}
dependencies {
    compileOnly "com.sun.xml.ws:jaxws-rt:4.0.2"
    compileOnly "org.glassfish.jaxb:jaxb-runtime:4.0.4"

    implementation 'de.codecentric:spring-boot-admin-starter-server'
    implementation 'de.codecentric:spring-boot-admin-server-ui'

    implementation 'de.codecentric:spring-boot-admin-client'
    implementation 'org.springframework.boot:spring-boot-starter'
    implementation 'org.springframework:spring-web:6.1.4'

    implementation 'org.springframework.boot:spring-boot-starter-security:3.2.3'
    implementation 'org.springframework.boot:spring-boot-starter-web:3.2.3'
    implementation 'org.springframework.boot:spring-boot-starter-actuator:3.2.3'
    // https://mvnrepository.com/artifact/org.springframework.security/spring-security-config
    implementation 'org.springframework.security:spring-security-config:6.2.2'
    implementation 'org.jolokia:jolokia-client-java:2.0.2'
    implementation 'org.jolokia:jolokia-support-spring:2.0.2'


    testImplementation "com.sun.xml.ws:jaxws-rt:4.0.2"
    testImplementation "org.glassfish.jaxb:jaxb-runtime:4.0.4"
}

dependencyManagement {
    imports {
        mavenBom "de.codecentric:spring-boot-admin-dependencies:${springBootAdminVersion}"
    }
}

bootJar {
    archiveFileName = 'admin-console.jar'
}


test {
    useJUnitPlatform()
}
